# astmarker

./: AstMarker.cpp  AstMarker.h  CMakeLists.txt  Log.md  README.md  WHATDelete.md  asterisms.cpp  asterisms.h  image.cpp  image.h  imageEval.cpp  imageEval.h  main.cpp  program.cpp
